// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/annotation/filter.test.ts should test catch global 1`] = `
Object {
  "catchOptions": Object {},
  "catchTargets": undefined,
}
`;

exports[`/test/annotation/filter.test.ts test catch decorator 1`] = `
Object {
  "catchOptions": Object {},
  "catchTargets": Array [
    [Function],
  ],
}
`;

exports[`/test/annotation/filter.test.ts test catch decorator 2`] = `
Object {
  "catchOptions": Object {
    "matchPrototype": true,
  },
  "catchTargets": Array [
    [Function],
  ],
}
`;

exports[`/test/annotation/filter.test.ts test match decorator 1`] = `
Object {
  "matchPattern": true,
}
`;
